--- a/templates/storage/data-persistentvolume.yaml
+++ b/templates/storage/data-persistentvolume.yaml
@@ -9,7 +9,7 @@ spec:
   accessModes:
     - ReadWriteOnce
   capacity:
-    storage: 10Gi
+    storage: {{ .Values.storage.data.capacity }}
   hostPath:
-    path: /mnt/data
+    path: {{ .Values.storage.data.path }}
     type: DirectoryOrCreate
