Set user/group id where possible

--- a/templates/jackett/deployment.yaml
+++ b/templates/jackett/deployment.yaml
@@ -33,6 +33,8 @@ spec:
           #   httpGet:
           #     path: /
           #     port: http
+          env:
+            {{- include "helm-mediaserver.basicEnvs" . | nindent 12 }}
           volumeMounts:
             - name: config
               subPath: jackett
