--- a/templates/ngnix/sonarr-ingress.yaml
+++ b/templates/ngnix/sonarr-ingress.yaml
@@ -6,13 +6,12 @@ metadata:
   labels:
     {{- include "helm-mediaserver.labels" . | nindent 4 }}
     app.kubernetes.io/component: ingress
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   rules:
-  - http:
+  - host: {{ .Values.nginx.host }}
+    http:
       paths:
-      - path: /sonarr(/|$)(.*)
+      - path: /sonarr
         pathType: Prefix
         backend:
           service:
