--- a/mediaserver/templates/transmission/vpncredentials-secret.yaml
+++ b/mediaserver/templates/transmission/vpncredentials-secret.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.transmission.vpn.enabled }}
+{{- if and (.Values.transmission.vpn.enabled) (empty .Values.transmission.vpn.secret) }}
 apiVersion: v1
 kind: Secret
 metadata:
