--- a/mediaserver/values.yaml
+++ b/mediaserver/values.yaml
@@ -24,6 +24,7 @@ transmission:
   webui: "combustion"
   vpn:
     enabled: false
+    secret: ""
     credentials:
       provider: ""
       config: ""
